--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.12",
     "lottie-react": "^2.4.1",
     "react": "^19.1.0",
