--- a/public/desktop.ini
+++ b/public/desktop.ini
@@ -1,2 +1,3 @@
 [LocalizedFileNames]
 Screenshot 2025-08-11 004450.png=@Screenshot 2025-08-11 004450.png,0
+Screenshot 2025-08-19 165423.png=@Screenshot 2025-08-19 165423.png,0
